--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,78 @@
+button {
+  border-radius:2px;
+  border:1px solid #171b23;
+  background-color: #2980b9;
+  color:white;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size:1.2rem;
+  padding:0.5rem;
+}
+button:hover {
+  background-color: #3A91CA;
+}
+
+button:active {
+  background-color:#186Fa8;
+}
+
+input[type=text] {
+  padding:0.2rem;
+  border-radius: 4px;
+}
+
+input[type=number] {
+  padding:0.2rem;
+  border-radius: 4px;
+}
+
+input[type=checkbox] {
+  visibility: hidden;
+}
+
+.checkbox-example {
+  width: 2.5rem;
+  height: 1rem;
+  background: #222;
+  margin: 1.2rem 0.8rem;
+  position: relative;
+  border-radius: 5px;
+}
+.checkbox-example label {
+  display: block;
+  width: 1rem;
+  height: 18px;
+  border-radius: 50%;
+  transition: all .5s ease;
+  cursor: pointer;
+  position: absolute;
+  top: -2px;
+  left: -3px;
+  background: #DDD;
+}
+.checkbox-example input[type=checkbox]:checked + label {
+  left: 1.7rem;
+  background-color: #2dFF2d;
+}
+
 .App {
   text-align: center;
+  background-color:#282c34;
+  color:white;
+  min-height:calc(100vh);
 }
 
 .App-table {
-  width:calc(90vw);
-  height:calc(90vh);
+  display:table-row;
+  margin:calc(5vw),0;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  min-height:calc(100vh);
 }
 
 .App-task-overflow {
   max-height:calc(90vh);
-  overflow-y:scroll;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  overflow-y:auto;
 }
 
 .App-header {
@@ -27,17 +84,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
